<resources>
    <string name="app_name">AndroidPluralsightCourse</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_send_email">Send As an Email</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_next">Next</string>
    <string name="action_settings">Settings</string>

    <string name="menu_courses">Courses</string>
    <string name="menu_notes">Notes</string>
    <string name="menu_share">Share</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="general_header">General</string>
    <string name="sync_header">Sync</string>

    <!-- General Preferences -->
    <string name="user_key">displayed_user_name</string>
    <string name="user_name_title">Displayed Username</string>
    <string name="email_key">displayed_email</string>
    <string name="email_title">Displayed Email</string>
    <string name="social_key">social_key</string>
    <string name="prefered_social_media_title">Select Social Media</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>