<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_courses_item"
            android:icon="@drawable/ic_courses_24"
            android:title="@string/menu_courses" />
        <item
            android:id="@+id/menu_notes_item"
            android:icon="@drawable/ic_notes_24"
            android:title="@string/menu_notes" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_share"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/menu_share" />
    </group>

</menu>